--- a/templates/search/index.html
+++ b/templates/search/index.html
@@ -23,10 +23,12 @@
           {% case "Projects" %}
             {% set projectPosts = projectPosts|merge([entry]) %}
             {# Add primary contact for project to People search results #}
-            {% set primaryContact = entry.projectLeaders.one().aeiPerson.one() %}
-            {% if primaryContact.id not in peoplePostsIds %}
-              {% set peoplePosts = peoplePosts|merge([primaryContact]) %}
-              {% set peoplePostsIds = peoplePostsIds|merge([primaryContact.id]) %}
+            {% if entry.projectLeaders|length %}
+              {% set primaryContact = entry.projectLeaders.one().aeiPerson.one() %}
+              {% if primaryContact.id not in peoplePostsIds %}
+                {% set peoplePosts = peoplePosts|merge([primaryContact]) %}
+                {% set peoplePostsIds = peoplePostsIds|merge([primaryContact.id]) %}
+              {% endif %}
             {% endif %}
           {% case "Offices" %}
             {% set servicePosts = servicePosts|merge([entry]) %}
