--- a/templates/people/index.html
+++ b/templates/people/index.html
@@ -37,6 +37,7 @@
         </li>
       {% endfor %}
     </ul>
+    {% include 'partials/_people-nav' %}
   </div>
 {% endset %}
 
@@ -49,6 +50,7 @@
       </li>
     {% endfor %}
   </ul>
+  {% include 'partials/_people-nav' %}
 {% endblock %}
 
 
