--- a/templates/services/_entry.html
+++ b/templates/services/_entry.html
@@ -13,13 +13,7 @@
 
 {% block filters %}
   <h2 class="font-nav"><a href="/services/">Services</a></h2>
-  <ul class="filters semantic-only-list">
-    {% for cat in craft.categories.group('services').all() %}
-      <li class="{{ active(cat.getUrl(), 'url', 'current') }}">
-        <a href="{{ cat.getUrl() }}">{{ cat.title }}</a>
-      </li>
-    {% endfor %}
-  </ul>
+  {% include 'partials/_hierarchy-nav' with { taxonomy: 'services' } %}
 {% endblock %}
 
 {% block content %}
