only show site name H1 if on homepage to avoid multiple H1 on internal pages

--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -2,7 +2,9 @@
   <div class="lockup-block">
     <a class="lockup" href="/">
       <div class="affiliated-engineers">
-        <h1 class="sr-only">{{ siteName }}</h1>
+        {% if craft.app.request.getUrl() == '/' %}
+          <h1 class="sr-only">{{ siteName }}</h1>
+        {% endif %}
         <svg class="logo"><use xlink:href="#affiliated-engineers-logo" /></svg>
       </div>
     </a>
