--- a/web/assets/scss/components/_nav.scss
+++ b/web/assets/scss/components/_nav.scss
@@ -72,7 +72,7 @@
           width: 27px;
           height: 24px;
           position: absolute;
-          background: url('../svgs/icon-right-arrow-red.svg') no-repeat;
+          background: url('/assets/svgs/icon-right-arrow-red.svg') no-repeat;
           background-size: contain;
         }
       }
