initial styles for sitewide notice and child services list

--- a/web/assets/scss/main.scss
+++ b/web/assets/scss/main.scss
@@ -15,7 +15,6 @@
 @import "helpers/spacing";
 @import "helpers/utilities";
 
-
 // Components
 @import "components/slick";
 @import "components/base";
@@ -39,6 +38,7 @@
 @import "components/contact-modal";
 @import "components/search";
 @import "components/filters";
+@import "components/sitewide-notice";
 
 // Pages
 @import "pages/pages";
