--- a/templates/partials/_people-nav.html
+++ b/templates/partials/_people-nav.html
@@ -2,7 +2,9 @@
 {% if peopleIndex.navigation|length %}
   <ul class="filters semantic-only-list">
     {% for item in peopleIndex.navigation %}
-      <li class="{{ active(item.url|replace('/(^\\/|\\/$)/', ''), 'path', 'current') }}"><a {% if item.openInNewTab %}rel="noopener" target="_blank" class="external"{% endif %} href="{{ item.url }}">{{ item.label }}</a>
+    	{% if not item.hide %}
+	      <li class="{{ active(item.url|replace('/(^\\/|\\/$)/', ''), 'path', 'current') }}"><a {% if item.openInNewTab %}rel="noopener" target="_blank" class="external"{% endif %} href="{{ item.url }}">{{ item.label }}</a>
+      {% endif %}
     {% endfor %}
   </ul>
 {% endif %}
