--- a/web/assets/scss/pages/_services.scss
+++ b/web/assets/scss/pages/_services.scss
@@ -11,7 +11,7 @@
 	.child-services {
 		margin-top: $padding-sm;
 	}
-  .mobile-filter.single-entry {
+  .mobile-filter.single-entry:not(.stuck) {
     padding-top: 0;
   }
 }
