--- a/templates/offices/_entry.html
+++ b/templates/offices/_entry.html
@@ -77,7 +77,7 @@
           {% endif %}
           {% if entry.officeLeaders|length %}
             <div class="meta-item -full">
-              <h3>Office Contacts</h3>
+              <h3>Office Contact{{ entry.officeLeaders|length > 1 ? 's' : '' }}</h3>
               <div class="content -spaced">
                 <ul class="semantic-only-list">
                   {% for leader in entry.officeLeaders.all() %}
